--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "@vueuse/core": "^12.4.0",
+    "chart.js": "^4.4.7",
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
